--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
-node_modules
-dist
+# ---- ChatLink Project Ignore Rules ----
+
+# dependencies
+node_modules/
+.pnp/
+.pnp.js
+
+# production build
+dist/
+build/
+
+# environment & secrets
+.env
+.env.local
+.env.*.local
+
+# logs & debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# system files
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+
+# IDE / Editor
+.vscode/
+.idea/
+*.swp
+
+# cache & misc
+.cache/
+.next/
+out/
+coverage/
+*.pid
+*.seed
+*.tgz
+
+# local database/storage
+*.sqlite
+*.db
