--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,5 @@
-# ---- ChatLink Project Ignore Rules ----
-
-# dependencies
-node_modules/
-.pnp/
-.pnp.js
-
-# production build
-dist/
-build/
-
-# environment & secrets
-.env
-.env.local
-.env.*.local
-
-# logs & debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# system files
-.DS_Store
-Thumbs.db
-
-# IDE / Editor
-.vscode/
-.idea/
-*.swp
-
-# cache & misc
-.cache/
-.next/
-out/
-coverage/
-*.pid
-*.seed
-*.tgz
-
-# local database/storage
-*.sqlite
-*.db
+node_modules/ 
+dist/ 
+build/ 
+project-structure.txt 
+.env 
