--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
-node_modules/ 
-dist/ 
-build/ 
-project-structure.txt 
-.env 
+# Node dependencies
+node_modules/
+
+# Build output
+dist/
+build/
+
+# Local env files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Platform-specific configs
+.replit
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Misc
+project-structure.txt
